# gridnn-for-3D-pointcloud

./: CMakeLists.txt
include/: bfnn.hpp  gridnn.hpp
src/: test.cpp
